Add CSS Styling to <p> tag within the quiz to make it bigger and more green

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,11 @@
 body{
   background-color:black;
 }
-
+p{
+  font-family: 'Space Mono', monospace;
+  color: lightgreen;
+  font-size: 23px;
+}
 label{
   font-family: 'Space Mono', monospace;
   color: lightgreen;
